W6L5 homework: add jquery progressbar

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>jQuery UI Datepicker - Default functionality</title>
+  <title>jQuery UI - Default functionality</title>
   <link rel="stylesheet" href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
   <link rel="stylesheet" href="/resources/demos/style.css">
   <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
@@ -30,6 +30,9 @@
   <script>
     $(function () {
       $("#datepicker").datepicker();
+    });
+    $(function () {
+      $("#progressbar").progressbar({ value: 33 });
     });
   </script>
 </head>
